test.txt
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o main.o main.c
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o accel.o accel.c
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o timestep.o timestep.c
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o init.o init.c
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o restart.o restart.c
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o io.o io.c
mpicc -O2 -xCORE-AVX2 -Wno-unknown-pragmas -fcommon -qopenmp -DBUILDINFO='"Build on login2.stampede3.tacc.utexas.edu by margotfa from margot_test:11415c44 at https://margotfitzaxen@bitbucket.org/guszejnov/gizmo_imf.git"' -DUSE_MPI_IN_PLACE -DNO_ISEND_IRECV_IN_DOMAIN -DHDF5_DISABLE_VERSION_CHECK -DUSE_FFTW3 -I/opt/apps/intel24/gsl/2.7.1/include -I/opt/apps/intel24/impi21/fftw3/3.3.10/include -I/opt/apps/intel24/hdf5/1.14.3/x86_64/include -DH5_USE_16_API      -c -o predict.o predict.c
predict.c:162:1: error: function definition is not allowed here
  162 | {
      | ^
predict.c:351:1: error: function definition is not allowed here
  351 | {
      | ^
predict.c:360:1: error: function definition is not allowed here
  360 | {
      | ^
predict.c:417:1: error: function definition is not allowed here
  417 | {
      | ^
predict.c:487:1: error: function definition is not allowed here
  487 | {
      | ^
predict.c:506:1: error: function definition is not allowed here
  506 | {
      | ^
predict.c:521:1: error: function definition is not allowed here
  521 | {
      | ^
predict.c:547:1: error: function definition is not allowed here
  547 | {
      | ^
predict.c:592:1: error: function definition is not allowed here
  592 | {
      | ^
predict.c:598:1: error: function definition is not allowed here
  598 | {
      | ^
predict.c:746:7: error: expected '}'
  746 | #endif
      |       ^
predict.c:104:1: note: to match this '{'
  104 | {
      | ^
11 errors generated.
make: *** [<builtin>: predict.o] Error 1
